--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-forms",
+  "name": "react-form",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "concurrently": "^5.1.0",
-    "json-server": "^0.16.0",
+    "formik": "^2.1.4",
+    "json-server": "^0.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"json-server -p 3001 db.json\"",
